[tool.poetry]
name = "babelbot"
version = "0.1.0"
description = "babelbot study"
authors = ["babelbot study Team"]

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
pytype = "^2020.6.1"
natto-py = "^0.9.2"
spacy = "^2.3.2"
konlpy = "0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
pytype = "^2020.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
